docs(site): prevent sidebar link wrapping

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+.sidebar nav a {
+  white-space: nowrap;
+}
+
 .sidebar a.active {
   font-weight: 600;
   color: #0366d6;
